Bug 352340 GetTextAtOffset doesn't work correctly for word boundaries patch by Mike Gao r=ginn.chen